tests/ui/lint/snapshots/nan_comparison_less_than.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Comparison with NaN is always false
   ╭─[test.lis:5:11]
 4 │   let x: float64 = 1.0
 5 │   let _ = x < math.NaN()
   ·           ───────┬──────
   ·                  ╰── always false
 6 │ }
   ╰────
  help: Per IEEE 754, NaN compares unequal to every value including itself. Use `math.IsNaN(x)` to test for NaN · code: [lint.nan_comparison]
