tests/ui/lint/snapshots/needless_bool_true_false.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Needless boolean if-else
   ╭─[test.lis:5:11]
 4 │   let b = 10;
 5 │   let x = if a > b { true } else { false };
   ·           ────────────────┬───────────────
   ·                           ╰── can be simpler
 6 │   let _ = x
   ╰────
  help: Replace this `if... else` with the condition itself · code: [lint.needless_bool]
